# api-auth0

./: LICENSE  README.md  api-auth0.cabal  stack.yaml
src/Auth0/: API.hs
src/Auth0/API/: Auth.hs  Authentification.hs  Config.hs  Management.hs  Types.hs
src/Auth0/API/Internal/: Access.hs
