name:                api-auth0
version:             0.1.1.1
synopsis:            Simple API client for Auth0
description:         Please see README.md
homepage:            https://github.com/kelecorix/api-auth0#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2016 Sergey Bushnyak
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Auth0.API
  build-depends:       base >= 4.7 && < 5
                   ,   aeson
                   ,   mtl
                   ,   bytestring		   
                   ,   containers
                   ,   text
                   ,   time		   
                   ,   wreq
                   ,   lens
  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

source-repository head
  type:     git
  location: https://github.com/sigrlami/api-auth0
